[gd_scene load_steps=28 format=2]

[ext_resource path="res://nodes/arc_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://assets/sprites/main.png" type="Texture" id=2]
[ext_resource path="res://assets/fx/lightsource.png" type="Texture" id=3]
[ext_resource path="res://nodes/dec_tileset.tres" type="TileSet" id=4]
[ext_resource path="res://assets/gui/DancingScript-VariableFont_wght.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/gui/Cabin-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=7]
[ext_resource path="res://assets/gui/theme.tres" type="Theme" id=8]
[ext_resource path="res://assets/sfx/518863__idomusics__rain.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/bgm/minute.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/fx/lightsource2.png" type="Texture" id=11]
[ext_resource path="res://interface/settings.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 14
use_mipmaps = true
use_filter = true
extra_spacing_top = -8
extra_spacing_space = -1
font_data = ExtResource( 6 )

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "idleSway"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "slideDown"

[sub_resource type="AnimationNodeStateMachineTransition" id=8]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=9]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=11]
states/idle/node = SubResource( 5 )
states/idle/position = Vector2( 439, 71 )
states/idleSway/node = SubResource( 6 )
states/idleSway/position = Vector2( 439.25, 171.5 )
states/slideDown/node = SubResource( 7 )
states/slideDown/position = Vector2( 284, 74.5 )
transitions = [ "slideDown", "idle", SubResource( 8 ), "idle", "idleSway", SubResource( 9 ), "idleSway", "idle", SubResource( 10 ) ]
start_node = "slideDown"

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[sub_resource type="Animation" id=13]
resource_name = "idle"
length = 4.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 32, 30, 32 ]
}

[sub_resource type="Animation" id=14]
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33 ]
}

[sub_resource type="Animation" id=15]
length = 6.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.01062
margin_top = -0.529404
margin_right = 1.01062
margin_bottom = -0.529419
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsView" parent="CanvasLayer/Control" instance=ExtResource( 12 )]
margin_left = -274.0
margin_top = -121.0
margin_right = 274.0
margin_bottom = 121.0

[node name="TitleMain" type="Label" parent="CanvasLayer/Control"]
margin_left = 115.078
margin_top = 80.342
margin_right = 470.078
margin_bottom = 173.342
custom_fonts/font = SubResource( 1 )
text = "Costumemaster"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/TitleMain"]
margin_left = 33.2751
margin_top = -11.1405
margin_right = 73.2751
margin_bottom = 18.8595
custom_fonts/font = SubResource( 2 )
text = "The"

[node name="Label2" type="Label" parent="CanvasLayer/Control/TitleMain"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -252.0
margin_top = -16.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "Reloaded"
align = 2

[node name="copytext" type="Label" parent="CanvasLayer/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -58.0
custom_fonts/font = SubResource( 4 )
text = "MENU_COPYRIGHT"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -167.0
margin_right = 244.0
margin_bottom = -16.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_start" type="Button" parent="CanvasLayer/Control/MenuButtons"]
margin_right = 228.0
margin_bottom = 45.0
text = "MENU_START"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_options" type="Button" parent="CanvasLayer/Control/MenuButtons"]
margin_top = 53.0
margin_right = 228.0
margin_bottom = 98.0
text = "MENU_OPTS"
flat = true
align = 0

[node name="btn_quit" type="Button" parent="CanvasLayer/Control/MenuButtons"]
margin_top = 106.0
margin_right = 228.0
margin_bottom = 151.0
text = "MENU_QUIT"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.117647, 0.113725, 0.156863, 1 )

[node name="World" type="Node2D" parent="."]
position = Vector2( 137.347, 102.718 )
scale = Vector2( 3.2, 3.2 )

[node name="TileMap" type="TileMap" parent="World"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 48, 48 )
format = 1
tile_data = PoolIntArray( -2, 5, 0, -1, 5, 0, -65536, 5, 0, -65535, 5, 0, -65534, 5, 0, -65533, 5, 0, -65532, 5, 0, -65531, 5, 0, -65530, 5, 0, -65529, 5, 0, 65534, 6, 0, 65535, 6, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 131070, 8, 0, 131071, 8, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 8, 0, 196606, 10, 0, 196607, 10, 0, 131072, 10, 0, 131073, 10, 0, 131074, 10, 0, 131075, 10, 0, 131076, 10, 0, 131077, 10, 0, 131078, 10, 0, 131079, 10, 0, 262142, 10, 0, 262143, 10, 0, 196608, 10, 0, 196609, 10, 0, 196610, 10, 0, 196611, 10, 0, 196612, 10, 0, 196613, 10, 0, 196614, 10, 0, 196615, 10, 0, 327678, 10, 0, 327679, 10, 0, 262144, 10, 0, 262145, 10, 0, 262146, 10, 0, 262147, 10, 0, 262148, 10, 0, 262149, 10, 0, 262150, 10, 0, 262151, 10, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="TileMap" type="TileMap" parent="World/TileMap"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 48, 48 )
format = 1
tile_data = PoolIntArray( -2, 41, 0, -65536, 47, 0, -65533, 25, 0, -65531, 44, 0, -65530, 37, 0, 3, 12, 0, 131070, 19, 0, 131071, 20, 0, 65536, 29, 0, 65537, 33, 0, 65538, 31, 0, 65539, 13, 0, 65541, 48, 0, 196606, 3, 0, 131075, 14, 0, 131078, 35, 0, 262143, 10, 0, 196608, 30, 0, 196609, 34, 0, 196610, 32, 0, 196611, 36, 0, 327679, 17, 0 )

[node name="Curtain" type="Light2D" parent="World"]
position = Vector2( 67.1503, 25.4461 )
scale = Vector2( 0.322581, 0.808387 )
texture = ExtResource( 3 )
texture_scale = 8.0
color = Color( 0.698039, 0.858824, 0.933333, 1 )
energy = 0.5
shadow_enabled = true
shadow_gradient_length = 0.3
shadow_filter = 1
shadow_filter_smooth = 0.5

[node name="Lamp" type="Light2D" parent="World"]
position = Vector2( 258.315, 8.18894 )
scale = Vector2( 0.322581, 0.322581 )
texture = ExtResource( 11 )
texture_scale = 6.0
color = Color( 0.992157, 0.905882, 0.756863, 1 )
mode = 2
shadow_enabled = true
shadow_gradient_length = 0.2
shadow_filter = 1
shadow_filter_smooth = 0.3

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 107, -348 )
scale = Vector2( 7.8, 7.80334 )
texture = ExtResource( 2 )
offset = Vector2( 81.0644, 63.4941 )
hframes = 38
frame = 31

[node name="AnimationTree" type="AnimationTree" parent="Sprite"]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/idle = SubResource( 13 )
anims/idleSway = SubResource( 14 )
anims/slideDown = SubResource( 15 )

[node name="Ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -1.0
autoplay = true

[node name="Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -0.8
autoplay = true
